--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
