--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.16",
+    "expo": "~51.0.31",
     "expo-av": "~14.0.6",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.17",
+    "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "^0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.4.0",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0"
   },
